# TrackingFollowing

./: README.md
real/: README.md  launch_detections.sh
real/rpi_check/: package.xml  setup.cfg  setup.py
real/rpi_check/launch/: one.launch.py
real/rpi_check/rpi_check/: botsort_track.py  detection.py  image_viewer.py  main.py  simple.py  track_id.py  utils.py
real/tracking_cpp/: CMakeLists.txt  package.xml
real/tracking_cpp/config/: follow_target_params.yaml
real/tracking_cpp/launch/: follow_target.launch.py  record.launch.py
real/tracking_cpp/src/: counter.cpp  real1.cpp  real2.cpp  search_only.cpp
sim/: README.md
